# cmake-macos-rosetta

./: .mypy.ini  CMakeLists.txt  README.md  has_avx.cpp  is_rosetta.cpp  is_rosetta.m  is_rosetta.py
